--- a/imports/components/todosList/todosList.html
+++ b/imports/components/todosList/todosList.html
@@ -20,7 +20,8 @@
 <ul>
   <li ng-bind = "$ctrl.test">
   </li>
-  <li ng-repeat="task in $ctrl.tasks" ng-class="{'checked': task.checked}" ng-show="{'checked': task.checked, 'private': task.private} ">
+  <li ng-repeat="task in $ctrl.tasks" ng-class="{'checked': task.checked}"
+      ng-show="{'checked': task.checked, 'private': task.private}">
   	<button class="delete" ng-click="$ctrl.removeTask(task)">delete</button>
     <input type="checkbox" ng-checked="task.checked" ng-click="$ctrl.setChecked(task)" class="toggle-checked"/>
     <span class="text" >
